# py-img-watermark

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
py_img_watermark/: __init__.py  core.py
tests/: test_py_img_watermark.py
